# fair-data-access

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: access-request.yml
.github/workflows/: access-request.yml  deploy-pages.yml  walkthrough.yml
docs/: architecture.md  did.json  index.html  index.md  myst.yml  tutorial-consumer.md  tutorial-provider.md
docs/keys/12a9dd3fbcf040a4bea2275dacb37d4e543f935862b26439c3acaa99a661f6cf/: hamburg-buildings.key
examples/walkthrough/: .gitignore  00_setup_did.py  01_provider.py  02_consumer.py  README.md  _config.yml  _toc.yml  intro.md  myst.yml
examples/walkthrough/data/: README.md  synthetic-biodiversity-observations.csv
examples/walkthrough/keys/: .gitignore  README.md  example-consumer-public.pem  example-provider-public.pem
examples/walkthrough/keys/did/: example-consumer.json  example-provider.json
examples/walkthrough/policies/: example-policy.jsonld
fair_data_access/: __init__.py  cli.py  did.py  encrypt.py  grant.py  keys.py  nanopub_utils.py  policy.py  rocrate.py
nanopubs/: create_access_grant_nanopub.ipynb  create_odrl_policy_nanopub.ipynb  create_odrl_template.ipynb  create_odrl_template_v2.ipynb  disapprove_nanopub.ipynb
nanopubs/config/: hamburg_access_grant.json  hamburg_odrl_policy.json
policies/: registry.json
policies/examples/: academic-only.jsonld  consortium-only.jsonld
scripts/: evaluate_policy_action.py  parse_request.py  publish_grant.py  resolve_did_action.py  wrap_key_action.py
