[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fair-data-access"
version = "0.1.0"
description = "ODRL-based access control for FAIR data with nanopublication policies and encrypted data packages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "FAIR2Adapt"},
]
dependencies = [
    "cryptography>=42.0",
    "nanopub>=2.1",
    "pyodre>=0.1",
    "httpx>=0.27",
    "rdflib>=7.0",
    "s3fs>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
fair-data-access = "fair_data_access.cli:main"
